# SRL-English

./: README.md  annotate.py  backend.py  backend_gpu.py  backend_gpu_old.py  bert_nom_id.jsonnet  nom_bert_srl.jsonnet  nom_predict_sentence.py  nom_sense_srl.jsonnet  predict_utils.py  requirements.txt  run_SRL.sh  run_SRL_gpu.sh  setup.cfg  setup.py  tabular_view.py
bolt_srl/: model.py
combined_unconstrained_srl/: model.py
nominal_sense_srl/: .nfs000000002608111500000057  predictor.py  predictor_all.py
nominal_srl/: __init__.py  nominal_srl_predictor.py
obsolete/: backend_gpu_old_old.py
ontonotes_srl/: nn_semantic_role_labeler.py  ontonotes_srl_nn_reader.py  srl_bert_bilstm.py
prep_srl/: __init__.py  preposition-srl-500e.jsonnet~  preposition_srl_model.py~  preposition_srl_reader.py
public/: srl.html
public/css/: srl.css  w3.css
public/js/: echarts.min.js  predict.js
srl_english/src/: annotate.py  annotate_eval.py  bert_base_srl.jsonnet  bert_sense_srl.jsonnet  convert_id_to_srl_input.py  doc_to_sen.py  input.txt  onto_nom_predict_sentence.py  onto_predict_sentence.py  run_SRL.sh  run_nom_pipeline.sh  set_paths.sh  tabular_view.py  test.py
srl_english/src/bolt_srl/: __init__.py  bolt.py  predictor.py  reader.py
srl_english/src/combined_unconstrained_srl/: __init__.py  predictor.py  reader.py
srl_english/src/id_nominal/: __init__.py  nombank_predicate_model.py  nombank_reader.py  nominal_predictor.py
srl_english/src/nominal_sense_srl/: __init__.py  model.py  predictor.py  (+1 more)
verb_sense_srl/: __init__.py  model.py  predictor.py  reader.py
(+17 files in other folders)
