[metadata]
name = SRL-English-Celine
version = 0.0.1
author = Celine1
author_email = celine1@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CogComp/SRL-English
project_urls =
    Bug Tracker = https://github.com/CogComp/SRL-English/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    # = src
packages = find:
python_requires = >=3.6

[options.packages.find]
# where = src
where = 
